# khanat-opennel-code

./: .gitignore  .gitlab-ci.yml  .hgignore  LICENSE  README.md
code/: CMakeLists.txt  CTestConfig.cmake  changelog.template  config.h.cmake  nelDashBuild.cmd  nelDashBuild.sh
code/CMakeModules/: AndroidToolChain.cmake  ConfigureChecks.cmake  FindCEGUI.cmake  FindCppTest.cmake  FindCustomMFC.cmake.BACKUP.4342.cmake  FindEFXUtil.cmake  FindFreeType.cmake  FindGTK2.cmake  FindIconv.cmake  FindJpeg.cmake  FindLibOVR.cmake  FindLibVR.cmake  FindLua52.cmake  FindLua53.cmake  FindLuabind.cmake  FindMSVC.cmake  FindMySQL.cmake  FindOgg.cmake  FindSquish.cmake  FindSteam.cmake  FindVorbis.cmake  FindXF86VidMode.cmake  Findassimp.cmake  PCHSupport.cmake  iOSToolChain.cmake  nel.cmake.BACKUP.4553.cmake
code/nel/: CMakeLists.txt  ChangeLog  nel-config.in
code/nel/doc/: Doxyfile.cmake.in  make_all_dox.sh  make_nel_dox.sh  make_packages_doc.sh  nel.dox  nelns.dox
code/nel/include/nel/: CMakeLists.txt
code/nel/samples/: CMakeLists.txt
code/nel/samples/3d/: CMakeLists.txt
code/nel/samples/georges/: CMakeLists.txt  main.cpp
code/nel/samples/misc/: CMakeLists.txt
code/nel/samples/pacs/: CMakeLists.txt  readme.txt
code/nel/src/: CMakeLists.txt
code/nel/src/3d/: CMakeLists.txt  animation.cpp  animation_set.cpp  bloom_effect.cpp  cloud.cpp  cloud_scape.cpp  cluster.cpp  computed_string.cpp  driver.cpp  driver_user.cpp  driver_user2.cpp  dru.cpp  fasthls_modifier.cpp  flare_model.cpp  font_generator.cpp  font_manager.cpp  fxaa.cpp  fxaa_program.h  geometry_program.cpp  gpu_program_params.cpp  index_buffer.cpp  init_3d.cpp  instance_lighter.cpp  landscape.cpp  landscape_user.cpp  landscapeig_manager.cpp  landscapevb_allocator.cpp  lod_character_shape.cpp  material.cpp  mesh.cpp  mesh_morpher.cpp  mesh_mrm.cpp  mesh_mrm_skin.cpp  mesh_mrm_skin_template.cpp  mesh_mrm_skinned.cpp  mesh_multi_lod.cpp  meshvp_per_pixel_light.cpp  meshvp_wind_tree.cpp  mrm_builder.cpp  nel-3d.pc  (+58 more)
code/nel/src/cegui/: CMakeLists.txt
code/nel/src/georges/: CMakeLists.txt  form.cpp  form_dfn.cpp  form_elm.cpp  header.cpp  nel-georges.pc.in  type.cpp
code/nel/src/gui/: CMakeLists.txt  action_handler.cpp  ctrl_base.cpp  ctrl_base_button.cpp  ctrl_button.cpp  ctrl_col_pick.cpp  ctrl_draggable.cpp  ctrl_polygon.cpp  ctrl_quad.cpp  ctrl_scroll.cpp  ctrl_scroll_base.cpp  ctrl_sheet_selection.cpp  ctrl_text_button.cpp  ctrl_tooltip.cpp  db_manager.cpp  dbgroup_combo_box.cpp  dbgroup_select_number.cpp  dbview_bar.cpp  dbview_bar3.cpp  dbview_digit.cpp  dbview_number.cpp  dbview_quantity.cpp  event_descriptor.cpp  event_listener.cpp  group_container.cpp  group_container_base.cpp  group_editbox.cpp  group_editbox_base.cpp  group_editbox_decor.cpp  group_frame.cpp  group_header.cpp  group_html.cpp  group_html_BACKUP_3737.cpp  group_html_parser.cpp  group_list.cpp  group_menu.cpp  group_modal.cpp  group_paragraph.cpp  group_scrolltext.cpp  group_submenu_base.cpp  (+45 more)
code/nel/src/ligo/: CMakeLists.txt  ligo_material.cpp  nel-ligo.pc.in  primitive.cpp  primitive_class.cpp  stdligo.h  transition.cpp  zone_bank.cpp  zone_region.cpp
code/nel/src/logic/: CMakeLists.txt  logic_condition.cpp  logic_event.cpp  logic_state.cpp  logic_state_machine.cpp  logic_variable.cpp  stdlogic.cpp  stdlogic.h
code/nel/src/misc/: CMakeLists.txt  aabbox.cpp  algo.cpp  app_context.cpp  async_file_manager.cpp  big_file.cpp  bit_mem_stream.cpp  bit_set.cpp  bitmap.cpp  bitmap_gif.cpp  bitmap_jpeg.cpp  bitmap_png.cpp  block_memory.cpp  bsphere.cpp  buf_fifo.cpp  cdb.cpp  cdb_bank_handler.cpp  cdb_branch.cpp  cdb_leaf.cpp  (+97 more)
code/nel/tools/: CMakeLists.txt
code/nelns/: CMakeLists.txt  CMakePackaging.txt
code/nelns/admin_executor_service/: CMakeLists.txt  admin_executor_service.cpp  log_report.cpp
code/nelns/admin_service/: CMakeLists.txt  admin_service.cpp
code/nelns/login_service/: CMakeLists.txt  connection_client.cpp  connection_web.cpp  login_service.h  mysql_helper.h
code/nelns/login_system/: CMakeLists.txt
code/nelns/naming_service/: CMakeLists.txt  naming_service.cpp
code/nelns/welcome_service/: CMakeLists.txt
code/ryzom/: CMakeLists.txt
code/ryzom/client/: CMakeLists.txt  client_default.cfg
code/ryzom/common/: CMakeLists.txt
code/ryzom/server/: admin_executor_service.cfg  admin_executor_service_default.cfg  ai_service.cfg  backup_service.cfg  backup_service_interface.cfg  common.cfg  dynamic_scenario_service.cfg  entities_game_service.cfg  entities_game_service_default.cfg  frontend_service.cfg  input_output_service.cfg  input_output_service_default.cfg  logger_service.cfg  monitor_service.cfg  session_browser_server.cfg  shard.screen.rc  shard_start.bat  shard_start_cmake.bat  shard_stop.bat  shard_stop_cmake.bat  shard_unifier_service.cfg  sql.cfg  used_continents.cfg
code/ryzom/server/src/patchman_service/: CMakeLists.txt  file_manager.cpp  rr_repository_reciever.cpp  service_main.cpp  service_main.h  spa_server_patch_applier.cpp  spt_server_patch_terminal.cpp
code/ryzom/tools/: CMakeLists.txt
code/ryzom/tools/client/client_patcher/: CMakeLists.txt  main.cpp
code/snowballs2/: CMakeLists.txt  CMakePackaging.txt
code/snowballs2/client/: client.cfg.in
code/studio/: CMakeLists.txt  ovqt_config.h.cmake
code/studio/doc/: make_ovqt_dox.sh  ovqt.dox
code/studio/src/: CMakeLists.txt  description.h  main.cpp  pm_watcher.cpp  pm_watcher.h  startup_settings_dlg.cpp  startup_settings_dlg.h  studio.qrc
code/tool/: CMakeLists.txt
code/tool/bin2c/: CMakeLists.txt  bin2c.cpp
code/tool/increment_version/: increment_version.cpp  increment_version.py
code/tool/path_content_diff/: path_content_diff.cpp
code/web/public_php/: index.php
(+3152 files in other folders)
