FILE(GLOB SRC *.cpp *.h)

LIST(REMOVE_ITEM SRC
			${CMAKE_CURRENT_SOURCE_DIR}/rr_module_itf.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/rr_module_itf.h
			${CMAKE_CURRENT_SOURCE_DIR}/re_module_itf.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/re_module_itf.h
			${CMAKE_CURRENT_SOURCE_DIR}/spt_module_itf.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/spt_module_itf.h
			${CMAKE_CURRENT_SOURCE_DIR}/spm_module_itf.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/spm_module_itf.h
			${CMAKE_CURRENT_SOURCE_DIR}/spa_module_itf.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/spa_module_itf.h
			${CMAKE_CURRENT_SOURCE_DIR}/re_repository_emitter.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/re_repository_emitter.h
			${CMAKE_CURRENT_SOURCE_DIR}/rr_repository_reciever.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/rr_repository_reciever.h
			${CMAKE_CURRENT_SOURCE_DIR}/stdin_monitor_thread.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/stdin_monitor_thread.h)

ADD_EXECUTABLE(ryzom_patchman_service WIN32 ${SRC})

INCLUDE_DIRECTORIES(${RZ_SERVER_SRC_DIR} ${MYSQL_INCLUDE_DIR} ${NEL_INCLUDE_DIR})

IF (APPLE)
   FIND_LIBRARY(COREFOUNDATION_LIBRARY CoreFoundation )
   FIND_LIBRARY(CORETEXT_LIBRARY CoreText )
   FIND_LIBRARY(GLIB2_LIBRARY glib-2.0 )
   FIND_LIBRARY(GIO2_LIBRARY gio-2.0 )
   FIND_LIBRARY(CAIRO_LIBRARY cairo )
   FIND_LIBRARY(X11_LIBRARY X11 )
   FIND_LIBRARY(XCB_LIBRARY xcb )
   FIND_LIBRARY(XCURSOR_LIBRARY Xcursor )
   FIND_LIBRARY(XCB_RENDER_LIBRARY xcb-render )
   FIND_LIBRARY(LDAP_R_LIBRARY ldap_r )
   FIND_LIBRARY(LDAP_LIBRARY ldap )
   FIND_LIBRARY(FREETYPE_LIBRARY freetype )
   FIND_LIBRARY(XFIXES_LIBRARY Xfixes )
   FIND_LIBRARY(XRENDER_LIBRARY Xrender )
   FIND_LIBRARY(PIXMAN_LIBRARY pixman-1 )
   FIND_LIBRARY(INTL_LIBRARY intl )
   FIND_LIBRARY(XI_LIBRARY Xi )
   FIND_LIBRARY(COREGRAPHICS_LIBRARY CoreGraphics )
   FIND_LIBRARY(XRANDR_LIBRARY Xrandr )
   FIND_LIBRARY(XDAMAGE_LIBRARY Xdamage )
   FIND_LIBRARY(FFI_LIBRARY ffi )
   FIND_LIBRARY(XEXT_LIBRARY Xext )
   FIND_LIBRARY(XFT_LIBRARY Xft )
   FIND_LIBRARY(PANGOFT2_LIBRARY pangoft2-1.0 )
   SET(OLD_CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_FIND_LIBRARY_SUFFIXES})
   SET(CMAKE_FIND_LIBRARY_SUFFIXES .dylib)
   FIND_LIBRARY(FONTCONFIG_LIBRARY fontconfig )
   FIND_LIBRARY(HARFBUZZ_LIBRARY harfbuzz )
   FIND_LIBRARY(RESOLV_LIBRARY resolv )
   SET(CMAKE_FIND_LIBRARY_SUFFIXES ${OLD_CMAKE_FIND_LIBRARY_SUFFIXES})
   FIND_LIBRARY(CORESERVICES_LIBRARY CoreServices )
   FIND_LIBRARY(XCOMPOSITE_LIBRARY Xcomposite )
   FIND_LIBRARY(XINERAMA_LIBRARY Xinerama )
   FIND_LIBRARY(X11_XCB_LIBRARY X11-xcb )
   FIND_LIBRARY(COCOA_LIBRARY Cocoa )
   FIND_LIBRARY(XAU_LIBRARY Xau )
   FIND_LIBRARY(XDMCP_LIBRARY Xdmcp )
   FIND_LIBRARY(BZ2_LIBRARY bz2 )

   TARGET_LINK_LIBRARIES(ryzom_patchman_service
					ryzom_adminmodules
					ryzom_gameshare
					ryzom_servershare
					nelmisc
					nelnet
					nelpacs
					nelgeorges
					nelligo
					${COREFOUNDATION_LIBRARY}
					${CORETEXT_LIBRARY}
					${GLIB2_LIBRARY}
					${GIO2_LIBRARY}
					${CAIRO_LIBRARY}
					${X11_LIBRARY}
					${XCB_LIBRARY}
					${XCURSOR_LIBRARY}
					${XCB_RENDER_LIBRARY}
					${LDAP_LIBRARY}
					${LDAPR_LIBRARY}
					${FREETYPE_LIBRARY}
					${XFIXES_LIBRARY}
					${XRENDER_LIBRARY}
					${PIXMAN_LIBRARY}
					${INTL_LIBRARY}
					${XI_LIBRARY}
					${COREGRAPHICS_LIBRARY}
					${XRANDR_LIBRARY}
					${XDAMAGE_LIBRARY}
					${FFI_LIBRARY}
					${XEXT_LIBRARY}
					${XFT_LIBRARY}
					${PANGOFT2_LIBRARY}
					${FONTCONFIG_LIBRARY}
					${HARFBUZZ_LIBRARY}
					${RESOLV_LIBRARY}
					${CORESERVICES_LIBRARY}
					${XCOMPOSITE_LIBRARY}
					${XINERAMA_LIBRARY}
					${X11_XCB_LIBRARY}
					${COCOA_LIBRARY}
					${XAU_LIBRARY}
					${XDMCP_LIBRARY}
					${BZ2_LIBRARY})
ELSE (APPLE)
   TARGET_LINK_LIBRARIES(ryzom_patchman_service
					ryzom_adminmodules
					ryzom_gameshare
					ryzom_servershare
					nelmisc
					nelnet
					nelpacs
					nelgeorges
					nelligo)
ENDIF (APPLE)

NL_DEFAULT_PROPS(ryzom_patchman_service "Ryzom, Services: Patch Manager Service (PMS)")
NL_ADD_RUNTIME_FLAGS(ryzom_patchman_service)

INSTALL(TARGETS ryzom_patchman_service RUNTIME DESTINATION sbin COMPONENT services)
